# fastmeteo

./: README.md  pyproject.toml  readme.md
.github/workflows/: build-publish.yml
fastmeteo/: __init__.py  grid.py  server.py  sync.py
metmesh/: client.py  grid.py  server.py
paper/: benchmark.ipynb  contrail.py  plots.ipynb  readme.md
paper/data/: benchmark_results.csv
test/: test_api.py  test_client.py
