
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastmeteo"
description = "Fast interpolation for ERA5 data with Zarr"
version = "0.2"
authors = ["Junzi Sun <j.sun-1@tudelft.nl>"]
license = "GNU Lesser General Public License v3 (LGPLv3)"
readme = "readme.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "fastmeteo", from = "." }]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.110"
uvicorn = "^0.29"
requests = "^2.31"
numpy = "^1.26"
click = "^8.1"
pandas = "^2.1.3"
zarr = "^2.17"
xarray = "^2024"
fsspec = "^2024"
dask = "^2024"
gcsfs = "^2024"
scipy = "^1.12"

[tool.poetry.scripts]
fastmeteo-serve = "fastmeteo.server:main"
fastmeteo-sync = "fastmeteo.sync:main"

[tool.black]
target_version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
